# radar

./: .env.example  .gitignore  README.md  __init__.py  canvas.json  demo.py  main.ipynb  main.py  production.py  pyproject.toml  server.py  software.py  state.json  stream.py  test.py
api/: main.py
api/routes/: events.py  search.py  status.py
gui/: equalizer.py  ttk.py
model/: capture.py  text.py  vector.py  vision.py  yolo.py
templates/: index.html
utils/: canvas.py  database.py  events.py  file.py  situation.py  source.py  state.py  storage.py  thread.py
visual/: canvas.py  compare.py  image.py  preprocessing.py
web/: .gitignore  bun.lockb  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: count.tsx  events.tsx  live.tsx  recent.tsx  search.tsx
web/src/components/ui/: search.tsx
web/src/hooks/: fetcher.ts
web/src/lib/: openapi.ts  utils.ts
