[project]
name = "radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.0.2",
    "opencv-python>=4.10.0.84",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.23",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
